<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".myaccount.fragment.AddressFragment"
    android:orientation="vertical">
    <include layout="@layout/toolbar_header"></include>

    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".myaccount.fragment.AddressFragment">

    <LinearLayout
        android:layout_above="@+id/btnAddAddressId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <LinearLayout

            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_10dp">
            <RelativeLayout
                android:id="@+id/rlNamePhoneDetailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10dp"
                android:background="@drawable/rectangle_corner_grey">
                <TextView
                    android:id="@+id/txtVName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_14"
                    android:text="Name : Bodul Babu">
                </TextView>
                <TextView
                    android:id="@+id/txtVPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_14"
                    android:layout_below="@+id/txtVName"
                    android:text="Phone Number : 9875535575">
                </TextView>
                <ImageView
                    android:layout_width="@dimen/icon_dimension"
                    android:layout_height="@dimen/icon_dimension"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/edit_icon">
                </ImageView>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/llEditNamePhoneId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold"
                    android:text="@string/personal_details"
                    android:layout_marginTop="@dimen/margin_10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_14"
                        android:layout_marginTop="@dimen/margin_5dp"
                        android:layout_marginBottom="@dimen/margin_5dp"
                        android:text="@string/first_name">
                    </TextView>
                    <EditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_14"
                        android:hint="Enter First Name"
                        android:maxLength="15"
                        android:inputType="textPersonName"
                        android:padding="@dimen/margin_10dp"
                        android:background="@drawable/rectangle_corner_grey">
                    </EditText>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_14"
                        android:layout_marginTop="@dimen/margin_15dp"
                        android:layout_marginBottom="@dimen/margin_5dp"
                        android:text="@string/last_name">
                    </TextView>
                    <EditText
                        android:id="@+id/edtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_14"
                        android:hint="@string/enter_last_name"
                        android:maxLength="15"
                        android:inputType="textPersonName"
                        android:padding="@dimen/margin_10dp"
                        android:background="@drawable/rectangle_corner_grey">
                    </EditText>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_14"
                    android:layout_marginTop="@dimen/margin_15dp"
                    android:layout_marginBottom="@dimen/margin_5dp"
                    android:text="@string/phone_number">
                </TextView>
                <EditText
                    android:id="@+id/edtPhoineNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_14"
                    android:hint="@string/enter_phone_number"
                    android:maxLength="15"
                    android:inputType="phone"
                    android:padding="@dimen/margin_10dp"
                    android:background="@drawable/rectangle_corner_grey">
                </EditText>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                android:text="@string/address_details"
                android:layout_marginTop="@dimen/margin_10dp">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/edtVHouseNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house_no"
                    android:layout_weight="2"
                    android:textSize="@dimen/text_size_14"
                    android:maxLength="10"
                    android:inputType="text"

                    />

                <EditText
                    android:id="@+id/edtVApartmentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apartment_name"
                    android:textSize="@dimen/text_size_14"
                    android:maxLength="10"
                    android:inputType="text"
                    android:layout_weight="1">
                </EditText>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:layout_marginTop="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/email_id">
            </TextView>
            <EditText
                android:id="@+id/edtVEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:textSize="@dimen/text_size_14"
                android:inputType="textEmailAddress"
                android:padding="@dimen/margin_10dp"
                android:background="@drawable/rectangle_corner_grey">
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:layout_marginTop="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/street">
            </TextView>
            <EditText
                android:id="@+id/edtVStreetDetailsToLocateYou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:padding="@dimen/margin_10dp"
                android:background="@drawable/rectangle_corner_grey"
                android:hint="@string/street_details_to_locate_you">
            </EditText>>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:layout_marginTop="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/landmark">
            </TextView>
            <EditText
                android:id="@+id/edtVLandmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:padding="@dimen/margin_10dp"
                android:background="@drawable/rectangle_corner_grey"
                android:hint="@string/landmark_for_easy_reach_out">
            </EditText>>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:layout_marginTop="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/area_details">
            </TextView>
            <EditText
                android:id="@+id/edtVAreaDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:padding="@dimen/margin_10dp"
                android:background="@drawable/rectangle_corner_grey"
                android:hint="@string/enter_area_details">
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:layout_marginTop="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/state">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_corner_grey">
                <Spinner
                    android:id="@+id/spinnerStateId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                </Spinner>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:layout_marginTop="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/city">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_corner_grey">
                <Spinner
                    android:id="@+id/spinnerCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                </Spinner>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:layout_marginTop="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:text="@string/pincode">
            </TextView>
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:padding="1dp"
                android:background="@drawable/rectangle_corner_grey">
               <!-- <Spinner
                    android:id="@+id/spinnerZipId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>-->
                 <AutoCompleteTextView
                     android:id="@+id/edtVPincode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="@dimen/text_size_14"
                     android:maxLength="6"
                     android:padding="9dp"
                     android:layout_margin="1dp"
                     android:inputType="number"
                     android:background="@color/white"
                     android:hint="@string/pincode">
                 </AutoCompleteTextView>>
             </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:text="@string/choose_a_nick_name">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtVHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_10dp"
                    android:background="@drawable/rectangle_corner_grey"
                    android:text="@string/Home">
                </TextView>
                <TextView
                    android:id="@+id/txtVOffice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10dp"
                    android:padding="@dimen/margin_10dp"
                    android:background="@drawable/rectangle_corner_grey"
                    android:text="@string/office">
                </TextView>

                <TextView
                    android:id="@+id/txtVOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_corner_grey"
                    android:layout_marginStart="@dimen/margin_10dp"
                    android:padding="@dimen/margin_10dp"
                    android:text="@string/other">
                </TextView>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/theme_divider"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_height="1dp" />
            <CheckBox
                android:id="@+id/checkSetAsDefaultAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_this_as_my_default_delivery_address" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAddAddressId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/lightgray"
            android:layout_marginBottom="100dp"
            android:text="@string/add_address" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>
</LinearLayout>